<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/welcome_login"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/join_continue"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/blue_grey_300" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_200" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textColor="@color/blue_grey_800"
            android:theme="@style/EditText.Blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_200" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:inputType="numberPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColor="@color/blue_grey_800"
            android:theme="@style/EditText.Blue" />


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mxlarge" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/btn_rounded_orange"
            android:onClick="ingresar"
            android:text="@string/join"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/infoApp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_200" />

    </LinearLayout>

</RelativeLayout>