<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrarUsuarioActivity">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_register" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/register_user"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/join_data"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/blue_grey_300" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/document"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_document"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Blue" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Blue" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_register_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Blue" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_register_clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="numberPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Blue" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/re_password"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_register_clave_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="numberPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Blue" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cell_phone"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_cell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Blue" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rounded_orange"
                    android:onClick="registrar"
                    android:text="@string/register_button"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>